--- a/lonelyTwitterTests/AndroidManifest.xml
+++ b/lonelyTwitterTests/AndroidManifest.xml
@@ -13,5 +13,5 @@
         android:label="@string/app_name" >
         <uses-library android:name="android.test.runner" />
     </application>
-
+	<uses-sdk android:minSdkVersion="9"/>
 </manifest>
